# poetry_pypirc

./: pyproject.toml
poetry_pypirc/: main.py
tests/: test_poetry_pypirc.py
