[tool.poetry]
name = "poetry_pypirc"
version = "0.1.0"
description = ""
authors = ["Narek Amirbekian"]

[tool.poetry.dependencies]
python = "^3.8"
sh = "^1.14.2"
toml = "^0.10.2"
pathlib = "^1.0.1"


[tool.poetry.scripts]
poetry-pypirc = "poetry_pypirc.main:main"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
